compiler/testData/diagnostics/tests/nullableTypes/unsafeCallOnOperatorRedCode.kt
fun add(a: Int?, b: Int?): Int {
    return a<!NONE_APPLICABLE!>+<!><!SYNTAX!><!>
}
